# hashes

sha1-armv8/: Cargo.toml
sha1-armv8/benches/: lib.rs
sha1-armv8/examples/: sha1sum.rs
sha1-armv8/src/: consts.rs  lib.rs  target_checks.rs  utils.rs
sha1-armv8/tests/: lib.rs
sha2-armv8/: Cargo.toml  LICENSE-MIT
sha2-armv8/benches/: sha256.rs
sha2-armv8/examples/: sha256sum.rs
sha2-armv8/src/: consts.rs  lib.rs  sha256.rs  sha256_utils.rs
sha2-armv8/tests/: lib.rs
